--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Colors
-include $HOME/.cache/wal/colors-kitty.conf
+include $HOME/.cache/matugen/colors-kitty.conf
 
 # Shell integration is sourced and configured manually
 shell_integration no-rc
