--- a/wm/waybar/.config/waybar/config
+++ b/wm/waybar/.config/waybar/config
@@ -190,19 +190,19 @@
       "format": "{icon}",
       "format-icons": {
         "1": "●",
-        "10": "0",
         "2": "●",
         "3": "●",
         "4": "●",
         "5": "●",
         "6": "●",
         "7": "●",
-        "8": "8",
-        "9": "9"
+        "8": "●",
+        "9": "●",
+        "10": "●",
       },
       "on-click": "activate",
       "persistent-workspaces": {
-        "*": 7
+        "*": 10,
       }
     },
     "layer": "top",
@@ -214,8 +214,8 @@
       "clock"
     ],
     "modules-left": [
-      //"hyprland/workspaces"
-      "wlr/taskbar"
+      "hyprland/workspaces"
+      // "wlr/taskbar"
     ],
     "modules-right": [
       "tray",
