--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -26,8 +26,8 @@ exec-once = firefox &
 ################
 
 # monitor=,preferred,auto,auto
-monitor = DP-1, highrr, auto, 1
-monitor = DP-2, highres, -1920x0, 1
+monitor = DP-1, highres, auto, 1
+monitor = DP-2, highrr, -1920x0, 1
 workspace=DP-1,1
 workspace=DP-2,11
 
@@ -58,7 +58,7 @@ env = "QT_QPA_PLATFORMTHEME,qt6ct"
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
-general { 
+general {
     gaps_in = 15
     gaps_out = 30
 
@@ -69,7 +69,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = true 
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -98,12 +98,11 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -124,7 +123,7 @@ master {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
+misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
 }
@@ -137,7 +136,7 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant = 
+    kb_variant =
     kb_model =
     kb_options =
     kb_rules =
@@ -239,11 +238,16 @@ bindm = $mod, mouse:273, resizewindow
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+windowrulev2 = fullscreen,title:(DDNet Client)
+windowrulev2 = workspace 11, title:^(DDNet Client)$
+windowrulev2 = workspace 1, class:^(firefox)$
+windowrulev2 = workspace 4, title:^(Spotify (Premium|Free)?)$
+windowrulev2 = workspace 7, title:^(.*(Disc|WebC)ord.*)$
+
+# Center and resize save as dialogs
+windowrulev2 = center,title:(Save As)
+windowrulev2 = size 50% 50%,title:(Save As)
+
 layerrule = blur,waybar
