--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ plugin {
     split-monitor-workspaces {
         count = 10
         keep_focused = 1
-        enable_notifications = 1
+        enable_notifications = 0
     }
 }
 
@@ -18,8 +18,15 @@ plugin {
 #################
 
 exec-once = waybar &
-exec-once = swaybg -i ~/Downloads/eberhard-grossgasteiger-SMyqIcE2NXs-unsplash.jpg &
+exec-once = swww-daemon &
 exec-once = firefox &
+exec-once = wlsunset -l 49.87 -L 8.65 &
+
+$gnome-schema = org.gnome.desktop.interface
+exec-once = gsettings set $gnome-schema icon-theme "Reversal-green"
+exec-once = gsettings set $gnome-schema cursor-theme "phinger-cursors-light"
+exec-once = gsettings set $gnome-schema cursor-size 48
+exec-once = gsettings set $gnome-schema font-name 'Lexend 13'
 
 ################
 ### MONITORS ###
@@ -39,9 +46,7 @@ env = "__GLX_VENDOR_LIBRARY_NAME,nvidia"
 env = "LIBVA_DRIVER_NAME,nvidia"
 env = "GBM_BACKEND,nvidia-drm"
 
-env = "HYPRCURSOR_THEME,rose-pine-hyprcursor"
-env = "HYPRCURSOR_SIZE,32"
-env = "XCURSOR_SIZE,32"
+env = "XCURSOR_SIZE,48"
 
 # electron / wayland
 env = "ELECTRON_OZONE_PLATFORM_HINT,auto"
