--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,22 +1,20 @@
 cl_antiping 1
-cl_nameplates 0
-cl_nameplates_size 10
-cl_text_entities 0
+cl_nameplates_size 0
 cl_text_entities_size 50
 cl_showhud_score 0
-cl_showhud_player_position 1
 cl_showfps 1
 cl_mouse_max_distance 350
 cl_show_welcome 0
-cl_default_zoom 9
+cl_download_community_skins 1
 player_use_custom_color 1
 player_color_body 7717415
 player_color_feet 1891083
-player_skin "koon"
-player_default_eyes 2
-ui_page 9
+player_skin "coala_x_ninja"
+player_default_eyes 3
+ui_page 10
+ui_settings_page 3
 ui_toolbox_page 1
-ui_server_address "45.141.57.22:8364"
+ui_server_address "45.141.57.45:8313"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -25,13 +23,15 @@ dummy_color_body 1794855
 dummy_color_feet 9260800
 dummy_skin "koon"
 dummy_default_eyes 2
-player_name "=phacrum="
-player_clan "desufnoc"
-cl_assets_entities "comfort"
+cl_skip_start_menu 1
+player_name "dr. bebert"
+player_clan "tschjirog"
+cl_assets_entities "Riskys_Entities4_1"
+cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
-br_filter_string ""
-br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
+br_filter_string "ame"
+br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
@@ -49,9 +49,8 @@ gfx_refresh_rate 1000
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
-cl_background_entities_color 101
-cl_background_entities "bit2.map"
-cl_menu_map "bit3"
+cl_background_entities_color 1441851
+cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
 cl_timeout_code "SKACWJCXZQYcdNSs"
@@ -62,18 +61,18 @@ gfx_3d_texture_analysis_ran 1
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
 gfx_3d_texture_analysis_version "4.6.0 NVIDIA 525.78.01"
 unbindall
-bind a "+weapon1"
+bind a "+weapon4"
 bind b "toggle gfx_high_detail 1 0"
 bind c "+weapon5"
-bind d "+weapon4"
-bind e "+weapon3"
+bind d "+weapon1"
+bind e "+weapon2"
 bind f "+right"
 bind g "say /lock"
 bind h "emote 2"
 bind i "rcon super"
 bind j "rcon down"
 bind k "rcon up"
-bind l "say /login Ba6Ivve9d4lahOX0"
+bind l "say /login pJg5V8GOysdY2wSS"
 bind q "+showhookcoll"
 bind r "say /pause"
 bind s "+left"
@@ -87,6 +86,7 @@ bind z "toggle cl_dummy_hammer 0 1"
 bind 1 "+spectate"
 bind 3 "vote yes"
 bind 4 "vote no"
+bind 5 "say /team 27"
 bind 6 "say /team 27"
 bind 7 "say /team 18"
 bind return "+show_chat; chat all"
@@ -107,7 +107,7 @@ bind ralt "toggle cl_overlay_entities 0 100"
 bind mouse1 "+fire"
 bind mouse2 "+hook"
 bind mouse3 "zoom"
-bind mouse4 "+weapon2"
+bind mouse4 "+weapon3"
 bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
@@ -282,6 +282,8 @@ add_friend "tuzii" "肥兔"
 add_friend "Berthold" ""
 add_friend "walter" "P2Z"
 add_friend "Veers" ""
+add_friend "dr. bebert" "desufnoc"
+add_friend "amelie" ""
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
