--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -16,7 +16,7 @@ window_padding_width 5
 copy_on_select yes
 
 # Font
-font_family Maple Mono NF
+font_family Maple Mono SC NF
 font_size 16
 
 modify_font cell_height 110%
@@ -24,7 +24,9 @@ modify_font cell_height 110%
 font_features CommitMono-Regular +ss01 +ss02 +ss03 +ss04 +ss05
 font_features CommitMono-Bold    +ss01 +ss02 +ss03 +ss04 +ss05
 
-font_features MapleMono-NF-Regular +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMono-NF-Light   +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMono-NF-Italic  +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMono-NF-Bold    +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+font_features MapleMonoSCNF-Regular       +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+font_features MapleMonoSCNF-Light         +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+font_features MapleMonoSCNF-LightItalic   +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+font_features MapleMonoSCNF-Italic        +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+font_features MapleMonoSCNF-BoldItalic    +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+font_features MapleMonoSCNF-Bold          +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
