--- a/gui/zed-editor/.config/zed/settings.json
+++ b/gui/zed-editor/.config/zed/settings.json
@@ -6,13 +6,19 @@
   },
   "relative_line_numbers": true,
   "vim_mode": true,
-  "theme": "macOS Classic Dark",
+  "theme": "Ayu Light",
   "ui_font_size": 20,
   "ui_font_family": "Lexend",
-  "buffer_font_family": "Maple Mono NF",
+  "buffer_font_family": "Maple Mono SC NF",
   "buffer_font_size": 20,
   "buffer_font_features": {
-    "calt": true
+    "calt": true,
+    "liga": true,
+    "cv01": true,
+    "ss01": true,
+    "ss02": true,
+    "ss04": true,
+    "ss05": true
   },
   "git": {
     "inline_blame": { "enabled": false }
