--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -49,6 +49,9 @@ env = "GBM_BACKEND,nvidia-drm"
 env = "XCURSOR_SIZE,48"
 
 # electron / wayland
+env = "MOZ_ENABLE_WAYLAND,1"
+env = "MOZ_DBUS_REMOTE,1"
+env = "GDK_BACKEND,wayland"
 env = "ELECTRON_OZONE_PLATFORM_HINT,auto"
 env = "WLR_NO_HARDWARE_CURSORS,1"
 env = "XDG_SESSION_TYPE,wayland"
