Play with colors

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,5 +1,7 @@
 cl_antiping 1
+cl_nameplates 0
 cl_nameplates_size 0
+cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_score 0
 cl_showfps 1
@@ -10,11 +12,11 @@ player_use_custom_color 1
 player_color_body 7717415
 player_color_feet 1891083
 player_skin "coala_x_ninja"
-player_default_eyes 3
-ui_page 10
+player_default_eyes 2
+ui_page 9
 ui_settings_page 3
 ui_toolbox_page 1
-ui_server_address "45.141.57.45:8313"
+ui_server_address "176.9.114.238:8305"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -26,12 +28,12 @@ dummy_default_eyes 2
 cl_skip_start_menu 1
 player_name "dr. bebert"
 player_clan "tschjirog"
-cl_assets_entities "Riskys_Entities4_1"
+cl_assets_entities "comfort"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
-br_filter_string "ame"
-br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
+br_filter_string ""
+br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
@@ -50,6 +52,7 @@ cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 1441851
+cl_background_entities "bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -113,39 +116,39 @@ bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
 add_favorite_community "kog"
-add_excluded_community "kog"
-add_excluded_community "unique"
-add_excluded_community "nobyfng"
-add_excluded_community "blockworlds"
-add_excluded_community "midfun"
-add_excluded_community "teesports"
 add_excluded_community "none"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "AUS"
-add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "RUS"
+add_excluded_community "teesports"
+add_excluded_community "midfun"
+add_excluded_community "blockworlds"
+add_excluded_community "nobyfng"
+add_excluded_community "unique"
+add_excluded_community "kog"
 add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "RUS"
+add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "IRN"
+add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "USA"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -284,6 +287,7 @@ add_friend "walter" "P2Z"
 add_friend "Veers" ""
 add_friend "dr. bebert" "desufnoc"
 add_friend "amelie" ""
+add_friend "Kingjulius" "GEN"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
