--- a/gui/zed-editor/.config/zed/settings.json
+++ b/gui/zed-editor/.config/zed/settings.json
@@ -6,7 +6,7 @@
   },
   "relative_line_numbers": true,
   "vim_mode": true,
-  "theme": "Ayu Light",
+  "theme": "Ayu Mirage",
   "ui_font_size": 20,
   "ui_font_family": "Lexend",
   "buffer_font_family": "Maple Mono SC NF",
