--- a/wm/matugen-bin/.config/matugen/colors-kitty.conf
+++ b/wm/matugen-bin/.config/matugen/colors-kitty.conf
@@ -14,7 +14,6 @@ color0 {{colors.surface_container.default.hex}}
 color8 {{colors.surface_container_high.default.hex}}
 
 # red
-# color1 #E78284
 color1 {{ colors.red.default.hex }}
 color9 {{ colors.red_container.default.hex }}
 
@@ -23,8 +22,8 @@ color2  {{ colors.green.default.hex }}
 color10  {{ colors.green_container.default.hex }}
 
 # yellow
-color3  {{ colors.yellow.default.hex }}
-color11  {{ colors.yellow_container.default.hex }}
+color3  {{ colors.orange.default.hex }}
+color11  {{ colors.orange_container.default.hex }}
 
 # blue
 color4  {{ colors.blue.default.hex }}
