--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -10,10 +10,10 @@ player_color_body 7717415
 player_color_feet 1891083
 player_skin "coala_x_ninja"
 player_default_eyes 2
-ui_page 10
-ui_settings_page 8
-ui_toolbox_page 2
-ui_server_address "45.141.57.45:8314"
+ui_page 9
+ui_settings_page 1
+ui_toolbox_page 1
+ui_server_address "45.141.57.22:8336"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -25,12 +25,12 @@ dummy_default_eyes 2
 cl_skip_start_menu 1
 player_name "dr. bebert"
 player_clan "tschjirog"
-cl_assets_entities "Riskys_Entities4_1"
+cl_assets_entities "comfort"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
 br_filter_string ""
-br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
+br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
@@ -134,6 +134,8 @@ add_excluded_country "nobyfng" "CHL"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "RUS"
 add_excluded_country "ddnet" "UKR"
+add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "USA"
 add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
@@ -145,8 +147,6 @@ add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
 add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "USA"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -286,6 +286,8 @@ add_friend "dr. bebert" "desufnoc"
 add_friend "amelie" ""
 add_friend "Kingjulius" "GEN"
 add_friend "ZimE" "Jump with W"
+add_friend "Loop :3" ""
+add_friend "Cor" "flawLess"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
