--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -70,10 +70,10 @@ general {
     gaps_in = 15
     gaps_out = 30
 
-    border_size = 3
+    border_size = 5
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(555555aa) rgba(ffffffcc) 45deg
+    col.active_border = rgba(55aa55ff) rgba(ffffffff) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -149,7 +149,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 2
     accel_profile = "flat";
 
     sensitivity = 0
@@ -253,9 +253,13 @@ windowrulev2 = workspace 11, title:^(DDNet Client)$
 windowrulev2 = workspace 1, class:^(firefox)$
 windowrulev2 = workspace 4, title:^(Spotify (Premium|Free)?)$
 windowrulev2 = workspace 7, title:^(.*(Disc|WebC)ord.*)$
+windowrulev2 = workspace 7, title:^(discord-screenaudio)$
 
 # Center and resize save as dialogs
 windowrulev2 = center,title:(Save As)
 windowrulev2 = size 50% 50%,title:(Save As)
+
+windowrulev2 = center,title:(Bitwarden — Mozilla Firefox)$
+windowrulev2 = size 50% 50%,title:(Bitwarden — Mozilla Firefox)$
 
 layerrule = blur,waybar
