feat(zellij): add zjstatus

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,5 +1,7 @@
 cl_antiping 1
+cl_nameplates 0
 cl_nameplates_size 0
+cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_score 0
 cl_mouse_max_distance 350
@@ -8,12 +10,11 @@ cl_download_community_skins 1
 player_use_custom_color 1
 player_color_body 7717415
 player_color_feet 1891083
-player_skin "coala_x_ninja"
+player_skin "koon"
 player_default_eyes 2
-ui_page 9
-ui_settings_page 1
-ui_toolbox_page 1
-ui_server_address "45.141.57.22:8336"
+ui_settings_page 2
+ui_toolbox_page 2
+ui_server_address "45.141.57.22:8340"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -23,14 +24,14 @@ dummy_color_feet 9260800
 dummy_skin "koon"
 dummy_default_eyes 2
 cl_skip_start_menu 1
-player_name "dr. bebert"
-player_clan "tschjirog"
+player_name "=phacrum="
+player_clan "desufnoc"
 cl_assets_entities "comfort"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
 br_filter_string ""
-br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
+br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
@@ -43,13 +44,12 @@ gfx_screen_height 1080
 gfx_screen_refresh_rate 144
 gfx_desktop_width 1920
 gfx_desktop_height 1080
-gfx_high_detail 0
 gfx_refresh_rate 1000
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 1441883
-cl_background_entities "bit2.ma"
+cl_background_entities "bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -62,7 +62,7 @@ gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
 gfx_3d_texture_analysis_version "4.6.0 NVIDIA 525.78.01"
 unbindall
 bind a "+weapon4"
-bind b "toggle gfx_high_detail 1 0"
+bind b "say (づ ᴗ _ᴗ)づ  b"
 bind c "+weapon5"
 bind d "+weapon1"
 bind e "+weapon2"
@@ -78,7 +78,7 @@ bind r "say /pause"
 bind s "+left"
 bind t "say /spec"
 bind u "rcon unsuper"
-bind v "toggle cl_dummy 0 1"
+bind v "say ᕦ(ò_óˇ)ᕤ gg"
 bind w "toggle cl_text_entities 0 1; toggle cl_nameplates 0 1"
 bind x "say /r"
 bind y "+show_chat; chat team"
@@ -86,7 +86,7 @@ bind z "toggle cl_dummy_hammer 0 1"
 bind 1 "+spectate"
 bind 3 "vote yes"
 bind 4 "vote no"
-bind 5 "say /team 27"
+bind 5 "say /team 10"
 bind 6 "say /team 27"
 bind 7 "say /team 18"
 bind return "+show_chat; chat all"
@@ -113,26 +113,14 @@ bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
 add_favorite_community "kog"
-add_excluded_community "kog"
-add_excluded_community "unique"
-add_excluded_community "nobyfng"
-add_excluded_community "blockworlds"
-add_excluded_community "midfun"
-add_excluded_community "teesports"
 add_excluded_community "none"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
+add_excluded_community "teesports"
+add_excluded_community "midfun"
+add_excluded_community "blockworlds"
+add_excluded_community "nobyfng"
+add_excluded_community "unique"
+add_excluded_community "kog"
+add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "UKR"
 add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
@@ -146,7 +134,19 @@ add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "IRN"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -163,7 +163,6 @@ add_friend "Kasia" ""
 add_friend "el Noberto" "Eagle"
 add_friend "Feuerfaust Ace" ""
 add_friend "=FireRed=" "Eagle"
-add_friend "Gooran" "A-Team"
 add_friend "Mike Litoris" ""
 add_friend "Kryolith" "aaaa"
 add_friend "Vycik" ""
@@ -288,6 +287,12 @@ add_friend "Kingjulius" "GEN"
 add_friend "ZimE" "Jump with W"
 add_friend "Loop :3" ""
 add_friend "Cor" "flawLess"
+add_friend "bambuk04" ""
+add_friend "Jimmy Jazz" ""
+add_friend "russsell" ""
+add_friend "siO" ""
+add_friend "Gooran" "A-Team"
+add_friend "=646838=" "full noob"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
