--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -16,11 +16,11 @@ plugin {
 #################
 ### AUTOSTART ###
 #################
-
 exec-once = waybar &
 exec-once = swww-daemon &
 exec-once = firefox &
 exec-once = wlsunset -l 49.87 -L 8.65 &
+exec-once = hyprdim -d 500 &
 
 $gnome-schema = org.gnome.desktop.interface
 exec-once = gsettings set $gnome-schema icon-theme "Reversal-green"
@@ -41,7 +41,7 @@ workspace=DP-2,11
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
-
+# nvidia
 env = "__GLX_VENDOR_LIBRARY_NAME,nvidia"
 env = "LIBVA_DRIVER_NAME,nvidia"
 env = "GBM_BACKEND,nvidia-drm"
@@ -49,6 +49,8 @@ env = "GBM_BACKEND,nvidia-drm"
 env = "XCURSOR_SIZE,48"
 
 # electron / wayland
+env = "SDL_VIDEODRIVER,wayland"
+
 env = "MOZ_ENABLE_WAYLAND,1"
 env = "MOZ_DBUS_REMOTE,1"
 env = "GDK_BACKEND,wayland"
@@ -127,7 +129,7 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_is_master = true
+    # new_is_master = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -259,7 +261,7 @@ windowrulev2 = workspace 7, title:^(discord-screenaudio)$
 windowrulev2 = center,title:(Save As)
 windowrulev2 = size 50% 50%,title:(Save As)
 
-windowrulev2 = center,title:(Bitwarden — Mozilla Firefox)$
-windowrulev2 = size 50% 50%,title:(Bitwarden — Mozilla Firefox)$
+windowrulev2 = center,title:(.* Bitwarden — Mozilla Firefox)$
+windowrulev2 = size 50% 50%,title:(.* Bitwarden — Mozilla Firefox)$
 
 layerrule = blur,waybar
