feat(nvim): incline, diags in corner, ...

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -12,9 +12,10 @@ player_color_body 7717415
 player_color_feet 1891083
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 2
-ui_toolbox_page 2
-ui_server_address "45.141.57.22:8340"
+ui_page 9
+ui_settings_page 3
+ui_toolbox_page 1
+ui_server_address "45.141.57.22:8304"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -26,7 +27,8 @@ dummy_default_eyes 2
 cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
-cl_assets_entities "comfort"
+cl_skin_filter_string "py"
+cl_assets_entities "InsomniaBrown_Entities"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -49,7 +51,7 @@ cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 1441883
-cl_background_entities "bit2.map"
+cl_background_entities "bit2x.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -112,14 +114,25 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_favorite_community "kog"
-add_excluded_community "none"
-add_excluded_community "teesports"
-add_excluded_community "midfun"
-add_excluded_community "blockworlds"
-add_excluded_community "nobyfng"
 add_excluded_community "unique"
-add_excluded_community "kog"
+add_excluded_community "nobyfng"
+add_excluded_community "blockworlds"
+add_excluded_community "midfun"
+add_excluded_community "teesports"
+add_excluded_community "none"
+add_excluded_country "unique" "CAN"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "USA"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "RUS"
 add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "UKR"
 add_excluded_country "ddnet" "CHN"
@@ -132,21 +145,8 @@ add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "unique" "USA"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "CAN"
+add_excluded_country "ddnet" "ZAF"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -287,12 +287,16 @@ add_friend "Kingjulius" "GEN"
 add_friend "ZimE" "Jump with W"
 add_friend "Loop :3" ""
 add_friend "Cor" "flawLess"
-add_friend "bambuk04" ""
 add_friend "Jimmy Jazz" ""
 add_friend "russsell" ""
 add_friend "siO" ""
 add_friend "Gooran" "A-Team"
 add_friend "=646838=" "full noob"
+add_friend "cagent" "xauusd"
+add_friend "Micro" "Eagle"
+add_friend "Gwendal" ""
+add_friend "OcFn" ""
+add_friend "TheGhast" "HyPax"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
