feat(chaotic): update post_install after refined blew up

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -12,9 +12,8 @@ player_color_body 7717415
 player_color_feet 1891083
 player_skin "koon"
 player_default_eyes 2
-ui_page 9
 ui_settings_page 3
-ui_toolbox_page 1
+ui_toolbox_page 2
 ui_server_address "45.141.57.22:8304"
 ui_color 3449833124
 ui_unread_news 1
@@ -33,7 +32,7 @@ cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
 br_filter_string ""
-br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
+br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
@@ -59,9 +58,10 @@ cl_timeout_code "SKACWJCXZQYcdNSs"
 cl_dummy_timeout_code "JUcyPbxZibEUQiGW"
 cl_timeout_seed "3fbXknWRfNKcnL3j"
 cl_config_version 1
-gfx_3d_texture_analysis_ran 1
+gfx_gl_minor 5
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
 gfx_3d_texture_analysis_version "4.6.0 NVIDIA 525.78.01"
+gfx_backend "OpenGL"
 unbindall
 bind a "+weapon4"
 bind b "say (づ ᴗ _ᴗ)づ  b"
