--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ exec-once = wlsunset -l 49.87 -L 8.65 &
 exec-once = (sleep 1 && hyprdim -d 500) &
 
 $gnome-schema = org.gnome.desktop.interface
-exec-once = gsettings set $gnome-schema icon-theme "Reversal-green"
+exec-once = gsettings set $gnome-schema icon-theme "WhiteSur"
 exec-once = gsettings set $gnome-schema cursor-theme "phinger-cursors-light"
 exec-once = gsettings set $gnome-schema cursor-size 48
 exec-once = gsettings set $gnome-schema font-name 'Lexend 13'
@@ -72,10 +72,10 @@ general {
     gaps_in = 15
     gaps_out = 30
 
-    border_size = 5
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(55aa55ff) rgba(ffffffff) 45deg
+    col.active_border = rgba(ffffffaa)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -96,9 +96,10 @@ decoration {
     inactive_opacity = 1.0
 
     drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow_range = 8
+    shadow_offset = -3, 5
+    shadow_render_power = 4
+    col.shadow = rgba(1a1a1a33)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
