--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -126,6 +126,7 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mod + P in the keybinds section below
     preserve_split = true # You probably want this
+    special_scale_factor = 0.95
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -223,16 +224,16 @@ bind = $mod, 9, split-workspace, 9
 bind = $mod, 0, split-workspace, 10
 
 # Move active window to a workspace with mod + SHIFT + [0-9]
-bind = $mod SHIFT, 1, split-movetoworkspace, 1
-bind = $mod SHIFT, 2, split-movetoworkspace, 2
-bind = $mod SHIFT, 3, split-movetoworkspace, 3
-bind = $mod SHIFT, 4, split-movetoworkspace, 4
-bind = $mod SHIFT, 5, split-movetoworkspace, 5
-bind = $mod SHIFT, 6, split-movetoworkspace, 6
-bind = $mod SHIFT, 7, split-movetoworkspace, 7
-bind = $mod SHIFT, 8, split-movetoworkspace, 8
-bind = $mod SHIFT, 9, split-movetoworkspace, 9
-bind = $mod SHIFT, 0, split-movetoworkspace, 10
+bind = $mod SHIFT, 1, split-movetoworkspacesilent, 1
+bind = $mod SHIFT, 2, split-movetoworkspacesilent, 2
+bind = $mod SHIFT, 3, split-movetoworkspacesilent, 3
+bind = $mod SHIFT, 4, split-movetoworkspacesilent, 4
+bind = $mod SHIFT, 5, split-movetoworkspacesilent, 5
+bind = $mod SHIFT, 6, split-movetoworkspacesilent, 6
+bind = $mod SHIFT, 7, split-movetoworkspacesilent, 7
+bind = $mod SHIFT, 8, split-movetoworkspacesilent, 8
+bind = $mod SHIFT, 9, split-movetoworkspacesilent, 9
+bind = $mod SHIFT, 0, split-movetoworkspacesilent, 10
 
 # Scroll through existing workspaces with mod + scroll
 bind = $mod, mouse_down, workspace, e+1
