fix(whichkey): new version

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ exec-once = waybar &
 exec-once = swww-daemon &
 exec-once = firefox &
 exec-once = wlsunset -l 49.87 -L 8.65 &
+exec-once = hypridle &
 exec-once = (sleep 1 && hyprdim -d 500) &
 
 $gnome-schema = org.gnome.desktop.interface
