feat(hypridle): add hypridle/lock

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -138,6 +138,7 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = 0
+    mouse_move_enables_dpms = false
     disable_hyprland_logo = true
 }
 
@@ -175,9 +176,9 @@ $mod = SUPER # Sets "Windows" key as main modifier
 
 bind = , XF86MonBrightnessUp,     exec, $brightness 5%+
 bind = , XF86MonBrightnessDown,   exec, $brightness 5%-
-bind = , XF86AudioRaiseVolume, exec, $volume +5%
-bind = , XF86AudioLowerVolume, exec, $volume -5%
-bind = , XF86AudioMute, exec, $mutetoggle
+bind = , XF86AudioRaiseVolume, exec, pamixer --increase 5
+bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
+bind = , XF86AudioMute, exec, pamixer --togle-mute
 bind = ,XF86AudioMicMute, exec, pamixer --default-source -t
 
 bind = $mod, return, exec, kitty
