feat(ags): mooooore ags

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ plugin {
 #################
 ### AUTOSTART ###
 #################
-exec-once = waybar &
+exec-once = ags &
 exec-once = swww-daemon &
 exec-once = firefox &
 exec-once = wlsunset -l 49.87 -L 8.65 &
