feat(wal): add back wal

--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,4 @@
 # Colors
-include $HOME/.cache/matugen/colors-kitty.conf
 
 background   #131414
 color0       #252626
@@ -20,6 +19,8 @@ color14      #7FEDFD
 color15      #EDEFF2
 cursorColor  #BBBDBF
 foreground   #969899
+
+include $HOME/.cache/wal/colors-kitty.conf
 
 # Shell integration is sourced and configured manually
 shell_integration no-rc
