--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -181,6 +181,8 @@ bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
 bind = , XF86AudioMute, exec, pamixer --togle-mute
 bind = ,XF86AudioMicMute, exec, pamixer --default-source -t
 
+bind = $mod, P, exec, hyprshot --mode region --output $HOME/Pictures/Scrots --freeze
+
 bind = $mod, return, exec, kitty
 bind = $mod, D, exec, anyrun
 
