--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -12,9 +12,9 @@ player_color_body 7717415
 player_color_feet 1891083
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 3
-ui_toolbox_page 2
-ui_server_address "45.141.57.22:8304"
+ui_settings_page 6
+ui_toolbox_page 1
+ui_server_address "62.122.215.19:8319"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -26,13 +26,12 @@ dummy_default_eyes 2
 cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
-cl_skin_filter_string "py"
-cl_assets_entities "InsomniaBrown_Entities"
+cl_assets_entities "comfort"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
 br_filter_string ""
-br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
+br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
@@ -50,7 +49,7 @@ cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 1441883
-cl_background_entities "bit2x.map"
+cl_background_entities "bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -58,10 +57,8 @@ cl_timeout_code "SKACWJCXZQYcdNSs"
 cl_dummy_timeout_code "JUcyPbxZibEUQiGW"
 cl_timeout_seed "3fbXknWRfNKcnL3j"
 cl_config_version 1
-gfx_gl_minor 5
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
 gfx_3d_texture_analysis_version "4.6.0 NVIDIA 525.78.01"
-gfx_backend "OpenGL"
 unbindall
 bind a "+weapon4"
 bind b "say (づ ᴗ _ᴗ)づ  b"
@@ -80,7 +77,7 @@ bind r "say /pause"
 bind s "+left"
 bind t "say /spec"
 bind u "rcon unsuper"
-bind v "say ᕦ(ò_óˇ)ᕤ gg"
+bind v "toggle cl_dummy 0 1"
 bind w "toggle cl_text_entities 0 1; toggle cl_nameplates 0 1"
 bind x "say /r"
 bind y "+show_chat; chat team"
@@ -297,6 +294,9 @@ add_friend "Micro" "Eagle"
 add_friend "Gwendal" ""
 add_friend "OcFn" ""
 add_friend "TheGhast" "HyPax"
+add_friend "Vappy" "NωG | uq"
+add_friend "Skeptar" ""
+add_friend "<BµMm>" "flawLess"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
